--- a/highlands.html
+++ b/highlands.html
@@ -243,7 +243,7 @@
                     <img class="npc-img" src="Images/NPC/Town/Dawat_Janos_McGreggor.png" alt="Janos McGreggor">  
                   </div>
                   <div>
-                    <img class="npc-img" src="Images/npc/Town/Orc_Guard.png" alt="Orc Guard">  
+                    <img class="npc-img" src="Images/NPC/Town/Orc_Guard.png" alt="Orc Guard">  
                   </div>
                   <div>
                     <img class="npc-img" src="Images/NPC/Town/Dawat_Yukugh_Tamilug.png" alt="Yukugh Tamilug">  
@@ -1095,7 +1095,7 @@
                     <img class="npc-img" src="Images/NPC/Town/Arda_Darius_Kyle.png" alt="Darius Kyle">  
                   </div>
                   <div>
-                    <img class="npc-img" src="Images/npc/Town/Arda_Arvanion.png" alt="Arvanion">  
+                    <img class="npc-img" src="Images/NPC/Town/Arda_Arvanion.png" alt="Arvanion">  
                   </div>
                   <div>
                     <img class="npc-img" src="Images/NPC/Town/Arda_Asicrel.png" alt="Asicrel">  
@@ -1119,15 +1119,15 @@
                   </div>           
                 <div class="flex-wrapper">
                   <div>
-                    <p><a href="#heroOfDawat"><span class="num-color-teal">1.</span> Jenn Talbot</a></p>
+                    <p><a href="#shovelTrouble"><span class="num-color-teal">1.</span> Jenn Talbot</a></p>
                     <img class="npc-img" src="Images/HighLands/Shovel_Trouble_Jenn_Talbot.png" alt="Jenn Talbot">  
                   </div>
                   <div>
-                    <p><a href="#hauntedHouse"><span class="num-color-teal">2.</span> Bucky Brown</a></p>
+                    <p><a href="#hooky"><span class="num-color-teal">2.</span> Bucky Brown</a></p>
                     <img class="npc-img" src="Images/HighLands/Hooky_Bucky_Brown.png" alt="Bucky Brown">  
                   </div>
                   <div>
-                    <p><a href="#sweetRelief"><span class="num-color-teal">3.</span> Zack Juiluin</a></p>
+                    <p><a href="#struggling"><span class="num-color-teal">3.</span> Zack Juiluin</a></p>
                     <img class="npc-img" src="Images/HighLands/Struggling_Zack_Juiluin.png" alt="Zack Juiluin">  
                   </div>
                   <div>
