Added more to Pegis quest

--- a/highlands.html
+++ b/highlands.html
@@ -1804,116 +1804,50 @@
                       <hr>
                       <p class="clearfix">
                           <img class="npc-img" src="Images/HighLands/Pegis_Picnic_Pegi.png" alt="Pegi">
-                          <span class="light-red">Pegi:</span> New to Dawat? Be on guard. Strange things northwest of town. New evil cult formed. They stooge around like hyena. Look for new followers. Always need new blood to replace sacrifices. I ask for your strength now. Young Orcs not care when I ask. They no listen 'til too late.
+                          <span class="light-red">Pegi:</span> I ventured into the caves to the east only to find them full of bugs! Oh, how I hate bugs! The guards they ahve posted there are useless. Why do they guard a cave full of bugs? Would you be so kind to enter the cave and kill some Termigon Warriors? Oh let's say.. 100 will do. I will give you a reward when you are done!
                           <br>
-                          <span class="green">Player:</span> <span class="player-text-color"> Yes! I will quell their evil.</span> 
-                          <br>
-                          <span class="light-red">Shargar:</span> Good! Good news. You set good example. must stay near Dawat, not wander off to easy Cultists in other lands. 
-                          <br>
-                          <span class="green">QUEST RECEIVED:</span><span class="red"> Hero of Dawat</span><span class="orange">, After speaking to Shargar in Dawat, you vowed to kill 50 Cultists!</span>
+                          <span class="green">QUEST RECEIVED:</span><span class="red"> Pegi's Picnic</span><span class="orange">, Pegi asked you to kill 100 Termigon Warriors in the cave east of Ethera.</span>
                         </p>
                       <hr>
                       <p class="clearfix">  
-                        <img class="monster-img" src="Images/NPC/Monsters/Cultist.png" alt="Cultist" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Cultist_Stats.png' alt='Cultist Stats'>">
-                        <img src="Images/HighLands/Hero_of_Dawat_Cultists_Location.png" alt="Cultists Location Map" width="500px" height="300px">
+                        <img class="monster-img" src="Images/NPC/Monsters/Termigon_Warrior.png" alt="Termigon Warrior" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Termigon_Warrior_Stats.png' alt='Termigon Warrior Stats'>">
+                        <img src="Images/HighLands/" alt="Ethera mine Map" width="500px" height="300px">
                         <br>
-                       Head out to the northwest of town to find the <span class="red">Cultist</span>. You will need to kill them with in the coordinates for them to cout as a kill for Shargar. 
-                       You will be updated as you kill them, <span class="green">QUEST UPDATE: You have killed 50 Cultists!</span>
+                       Head north along the south side of the moutain range and enter the cave to find the <span class="red">Termigon Warriors</span>. You will be updated as you kill them, <span class="green">QUEST UPDATE: You have killed 100 Termigon Warriors for Pegi!</span>
                        When you have killed all 50 you will be updated to return to Shargar.
                        <br>                                           
-                       <span class="green">QUEST UPDATE:</span><span class="red"> Hero of Dawat</span><span class="orange">, Return to Shargar in Dawat to collect your reward!</span>
+                       <span class="green">QUEST UPDATE:</span><span class="red"> Pegi's Picnic</span><span class="orange">, Return to Pegi in Ethera Palace to receive a reward.</span>
                       </p>
                       <hr>
                       <p>
-                        <span class="light-red">Shargar:</span> Good! You made dent in evil...maybe no new followers, hmm? reward for you now! come back, work more. Shargar pay well.
+                        <span class="light-red">Pegi:</span> Thank you! I cannot send you away empty handed.... <span class="orange">*She digs around in her picnic basket.*</span> Here is the reward I promised I've heard about a creature called Umbergon who is the source of the growing number of bugs in the cave. Slay Umbergon and then return to me.
                         <br>
-                        <span class="green">QUEST UPDATE:</span><span class="red"> Hero of Dawat</span><span class="orange">, You cleared the cultists away from the area</span>
-                      </p>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Pegi's picnic</span><span class="orange">, Slay Umbergon and then return to Pegi.</span>
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Gold Received: 500</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">27,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
-                        </ul>
-                        <hr>  
-                      <p>
-                        <span class="light-red">Shargar:</span> I go bragging about you, but learn bad news. Cultist not hurting yet. Have big bosses, Cult Leaders, they wear purple robes... Cut off the head, body falls. All warrior know that. Go seek leaders out.. They near Cultists
-                        <br>
-                        <span class="green">QUEST UPDATE:</span><span class="red"> Hero of Dawat</span><span class="orange">, Kill 75 Cult Leaders for Shargar.</span>
-                      </p>
-                      <hr>
-                      <p class="clearfix">  
-                        <img class="monster-img" src="Images/NPC/Monsters/Cult_Leader.png" alt="Cult Leader" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Cult_Leader_Stats.png' alt='Cultist Leader Stats'>">
-                        <br>
-                       Head out to the northwest of town to find the <span class="red">Cultist Leaders</span>. You will be updated as you kill them, <span class="green">QUEST UPDATE: You have killed 75 Cult Leaders for Shargar!</span>
-                       When you have killed all 75 you will be updated to return to Shargar.
-                       <br>                                           
-                       <span class="green">QUEST UPDATE:</span><span class="red"> Hero of Dawat</span><span class="orange">, Return to Shargar in Dawat to collect your reward!</span>
-                      </p>
-                      <hr>
-                      <p>
-                        <span class="light-red">Shargar:</span> Good, good. You show these young Orc what hero is. Here is reward! Come back. More work! Live in dark times.
-                        <br>
-                        <span class="green">QUEST UPDATE:</span><span class="red"> Hero of Dawat</span><span class="orange">, You eradicated the Cult Leaders for Shargar.</span>
-                      </p>
-                        <hr>
-                        <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Gold Received: 750</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM Received: Pegi's Pendant</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM Received: Cherry Pie</span></li>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">41,250</strong> Experience Pool <span class="light-red">experience may very</span></li>
-                        </ul>                      
-                        <hr>
-                        <p>
-                          <span class="light-red">Shargar:</span><span class="orange"> *The Orc Glares*</span> I happy to see you, but now even more problems to northwest. When cut a tree throns grow up in the sun. Cultist cut back. Now Thieves set up shop in abandoned warehouse below Abbey.
-                          You cannot stop now. Must stop thieves. Kill them. 
-                          <br>
-                          <span class="green">QUEST UPDATE:</span><span class="red"> Hero of Dawat</span><span class="orange">, Kill 100 Thieves for Shargar in the warehouse south of the Abbey.</span>
-                        </p>
-                        <hr>
-                        <p class="clearfix">  
-                          <img class="monster-img" src="Images/NPC/Monsters/Thief.png" alt="Thief" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Thief_Stats.png' alt='Thief Stats'>">
-                          <br>
-                         Head out to the northwest of town to find the warehouse with the <span class="red">Thieves</span>. You will be updated as you kill them, <span class="green">QUEST UPDATE: You have killed 100 Thieves for Shargar!</span>
-                         When you have killed all 100 you will be updated to return to Shargar.
-                         <br>                                           
-                         <span class="green">QUEST UPDATE:</span><span class="red"> Hero of Dawat</span><span class="orange">, Return to Shargar in Dawat to collect your reward!</span>
-                        </p>
-                        <hr>
-                        <p>
-                          <span class="light-red">Shargar:</span> Good work. You brave warrior. Here is reward. Shargar always pay...
-                          <br>
-                          <span class="green">QUEST UPDATE:</span><span class="red"> Hero of Dawat</span><span class="orange">, You killed thieves for Shargar.</span>
-                        </p>
+                        </ul>
+                        <hr> 
+                      </p>
+                      <p class="clearfix">  
+                        <img class="monster-img" src="Images/NPC/" alt="Umbergon" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/_Stats.png' alt='Umbergon Stats'>">
+                        <br>
+                       Head back to the mine to find <span class="red">Umbergon</span>. You will be updated when you kill it. 
+                       <br>                                           
+                       <span class="green">QUEST UPDATE:</span><span class="red"> Pegi's Picnic</span><span class="orange">, </span>
+                      </p>
+                      <hr>
+                      <p>
+                        <span class="light-red">Pegi:</span> 
+                        <br>                       
+                      </p>
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Gold Received: 1,000</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">13,750</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Gold Received: </span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">0,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>                      
-                        <hr>
-                        <p>
-                          <span class="light-red">Shargar:</span><span class="orange"> *Shargar wears a mean scowl*</span> I telling little Orcs story of your might. You battle wicked, bad men. These little orclets not impressed.
-                          Think you not able to do battle with Andreev. Andreev the ringleader. Kill Andreev ...perhaps thieves stop raiding Dawat...
-                          
-                          <br>
-                          <span class="green">QUEST UPDATE:</span><span class="red"> Hero of Dawat</span><span class="orange">, Take down Andreev the Quick, the leader of the Thieves.</span>
-                        </p>
-                        <hr>
-                        <p class="clearfix">  
-                          <img class="monster-img" src="Images/NPC/Boss/Andreev_the_Quick.png" alt="Andreev The Quick" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Boss/Andreev_the_Quick_Stats.png' alt='Andreev the Quick Stats'>">
-                          <br>
-                         Head out to the northwest of town to find the warehouse with <span class="red">Andreev the Quick</span>. Kill him then return to Shargar for your reward.
-                         <br>                                           
-                         <span class="green">QUEST UPDATE:</span><span class="red"> Hero of Dawat</span><span class="orange">, You've defeated Andreev the Quick. Return to Shargar in Dawat to collect your reward!</span>
-                        </p>
-                        <hr>
-                        <p>
-                          <span class="light-red">Shargar:</span> Dawat feels safer! You true friend of Dawat. Saved many tossing around nights. Now even little Orcs playing pretend hero games. Wear badge proudly in our town...
-                        </p>
-                        <hr>
-                        <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Hero of Dawat</span></li>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">GOLD RECEIVED: 2,000</span></li>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Your faction ranking with Krog has increased by 700!</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">82,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
-                        </ul>      
                         <hr>
                       <p>    
                       <p class="mt-4 py-3 text-center quest-complete">
