Small update to Pegis Quest

--- a/highlands.html
+++ b/highlands.html
@@ -1779,7 +1779,7 @@
                           </thead>    
                           </tr>
                           <tr>
-                            <td>Apprentice</td>
+                            <td>Adept</td>
                             <td>Combat</td>                        
                       </table>
                       <table class="table table-sm table-bordered text-center">
