Added Images to Highlands page

--- a/highlands.html
+++ b/highlands.html
@@ -102,6 +102,9 @@
                   <a href="#etheraPalaceSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Ethera Palace</a>
                   <ul class="collapse list-unstyled" id="etheraPalaceSubmenu">
                       <li>
+                        <a href="#etheraPalace">Ethera Palace</a>
+                      </li>  
+                      <li>
                           <a href="#pegisPicnic">Pegi's Picnic</a>
                       </li>
                   </ul>
@@ -185,6 +188,7 @@
                        </li>
                        <!-- accordion-toggle -->
                        <ul class="menu-submenu accordion-content">
+                          <li><a class="head" href="#etheraPalace">Ethera Palace</a></li>
                           <li><a class="head" href="#pegisPicnic">Pegi's Picnic</a></li>
                        </ul>
                          <!-- menu-submenu accordon-content-->
@@ -1636,12 +1640,12 @@
                   <div>
                     <div class="card-body img-card-body">
                       <div>
-                        <h2 id="grell" class="anchor text-center">Ethera Palace</h2>
+                        <h2 id="etheraPalace" class="anchor text-center">Ethera Palace</h2>
                         <p class="text-center">City Faction Bonus: +7% Magic Missile, +5 Intelligence</p>
                       </div>
                       <div class="flex-center">
                         <div>
-                          <img class="npc-img img-map-height" src="Images/Maps/" alt="Grell Map">                        
+                          <img class="npc-img img-map-height" src="Images/Maps/Ethera_Palace.png" alt="Ethera Palace Map">                        
                         </div>
                       </div>
                     </div>                  
@@ -1653,51 +1657,51 @@
                   <div class="flex-wrapper">
                     <div>
                       <p><span class="num-color-teal">Pub</span> </p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Desdemona">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Desdemona.png" alt="Desdemona">  
                     </div>
                     <div>
                       <p><span class="num-color-teal">Farming Shop</span> </p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Dugos">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Dugos.png" alt="Dugos">  
                     </div>
                     <div>
                       <p><span class="num-color-teal">Weaponry Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Lothannon">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Lothannon.png" alt="Lothannon">  
                     </div>
                     <div>
                       <p><span class="num-color-teal">Weaponry Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Denethan">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Denethan.png" alt="Denethan">  
                     </div>
                     <div>
                       <p><span class="num-color-teal">Armory</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Sevililoth">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Sevilioth.png" alt="Sevililoth">  
                     </div>
                     <div>
                       <p><span class="num-color-teal">Carpenter Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Larelikor">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Larelikor.png" alt="Larelikor">  
                     </div>
                     <div>
                       <p><span class="num-color-teal">Provisioner Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Ethialin">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Ethalin.png" alt="Ethialin">  
                     </div>   
                     <div>
                       <p><span class="num-color-teal">Inn</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Innkeeper">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Innkeeper.png" alt="Innkeeper">  
                     </div>  
                     <div>
                       <p><span class="num-color-teal">Leatherworking Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Zathras">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Zathras.png" alt="Zathras">  
                     </div>   
                     <div>
                       <p><span class="num-color-teal">Magic Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Astaeg">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Astaeg.png" alt="Astaeg">  
                     </div>  
                     <div>
                       <p><span class="num-color-teal">Ship Yard</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Adrekor">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Adrekor.png" alt="Adrekor">  
                     </div> 
                     <div>
                       <p><span class="num-color-teal">Blacksmith Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Cadenad">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Cadenad.png" alt="Cadenad">  
                     </div>        
                   </div> 
                   <hr>  
@@ -1706,19 +1710,22 @@
                     </div>           
                   <div class="flex-wrapper">
                     <div>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Lord Bleski">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Lord_Bleski.png" alt="Lord Bleski">  
                     </div>
                     <div>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Shakes"> 
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Shakes.png" alt="Shakes"> 
                     </div>                    
                     <div>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Jiggles">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Jiggles.png" alt="Jiggles">  
                     </div>
                     <div>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Dagnar">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Dagnar.png" alt="Dagnar">  
                     </div>
                     <div>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Alyssandra">  
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Alyssandra.png" alt="Alyssandra">  
+                    </div>
+                    <div>
+                      <img class="npc-img" src="Images/NPC/Town/Ethera_Palace_Mina_Dogen.png" alt="Mina Dogen">  
                     </div>
                     <div>
                       <img class="npc-img" src="Images/NPC/Town/Banker.png" alt="Banker">  
@@ -1730,7 +1737,7 @@
                       <img class="npc-img" src="Images/NPC/Town/Elite_Guard.png" alt="Elite Guard">  
                     </div>
                     <div>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Lotorian Knight">  
+                      <img class="npc-img" src="Images/NPC/Town/Lotorian_Knight.png" alt="Lotorian Knight">  
                     </div>
                     <div>
                       <img class="npc-img" src="Images/NPC/Town/Town_Wizard_Of_Insight.png" alt="Town Wizard of Insight">  
@@ -1797,6 +1804,7 @@
                             <td>
                             <img class="thumbnail-img" src="Images/HighLands/Pegis_Picnic_Cherry_Pie.png" alt="Cherry Pie" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Pegis_Picnic_Cherry_Pie_Stats.png' alt='Cherry Pie Stats'>">                        
                             <img class="thumbnail-img" src="Images/HighLands/Pegis_Picnic_Pegis_Pendant.png" alt="Pegis Pendant" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Pegis_Picnic_Pegis_Pendant_Stats.png' alt='Cherry Pie Stats'>"> 
+                            <img class="thumbnail-img" src="Images/HighLands/Pegis_Picnic_Termigon_Eye_Ring.png" alt="Pegis Pendant" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Pegis_Picnic_Termigon_Eye_Ring_Stats.png' alt='Termigon Eye Ring Stats'>"> 
                             <br>                        
                           </td>                        
                       </table>
@@ -1811,7 +1819,7 @@
                       <hr>
                       <p class="clearfix">  
                         <img class="monster-img" src="Images/NPC/Monsters/Termigon_Warrior.png" alt="Termigon Warrior" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Termigon_Warrior_Stats.png' alt='Termigon Warrior Stats'>">
-                        <img src="Images/HighLands/" alt="Ethera mine Map" width="500px" height="300px">
+                        <img src="Images/HighLands/Pegis_Picnic_Ethera_Mine.png" alt="Ethera mine Map" width="500px" height="300px">
                         <br>
                        Head north along the south side of the moutain range and enter the cave to find the <span class="red">Termigon Warriors</span>. You will be updated as you kill them, <span class="green">QUEST UPDATE: You have killed 100 Termigon Warriors for Pegi!</span>
                        When you have killed all 50 you will be updated to return to Shargar.
@@ -1825,35 +1833,35 @@
                         <span class="green">QUEST UPDATE:</span><span class="red"> Pegi's picnic</span><span class="orange">, Slay Umbergon and then return to Pegi.</span>
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM Received: Pegi's Pendant</span></li>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM Received: Cherry Pie</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Pegi's Pendant</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Cherry Pie</span></li>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">41,250</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
                         <hr> 
                       </p>
                       <p class="clearfix">  
-                        <img class="monster-img" src="Images/NPC/" alt="Umbergon" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/_Stats.png' alt='Umbergon Stats'>">
+                        <img class="monster-img" src="Images/NPC/Boss/Umbergon.png" alt="Umbergon" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Boss/Umbergon_Stats.png' alt='Umbergon Stats'>">
                         <br>
-                       Head back to the mine to find <span class="red">Umbergon</span>. You will be updated when you kill it. 
+                       Head back to the mine to find <span class="red">Umbergon</span>. Follow the path on the map above to find one of the locations You will be updated when you kill it. 
                        <br>                                           
-                       <span class="green">QUEST UPDATE:</span><span class="red"> Pegi's Picnic</span><span class="orange">, </span>
+                       <span class="green">QUEST UPDATE:</span><span class="red"> Pegi's Picnic</span><span class="orange">, Umbergon killed. Return to Pegi.</span>
                       </p>
                       <hr>
                       <p>
-                        <span class="light-red">Pegi:</span> 
+                        <span class="light-red">Pegi:</span> Umbergon is dead! The cave will soon return to normal. Take this ring as my reward. I will soon be replacing it. 
                         <br>                       
                       </p>
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Gold Received: </span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">0,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Termigon Eye Ring</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">27,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>                      
                         <hr>
                       <p>    
                       <p class="mt-4 py-3 text-center quest-complete">
                         Quest Complete
                       </p>
-                         
+                         You have slain Umbergon and returned the cave to normal.
                     </div>
                   </div>
                 </div>
