Added Images to Highlands Page

--- a/highlands.html
+++ b/highlands.html
@@ -1549,7 +1549,7 @@
                       </div>
                       <div class="flex-center">
                         <div>
-                          <img class="npc-img img-map-height" src="Images/Maps/" alt="Grell Map">                        
+                          <img class="npc-img img-map-height" src="Images/Maps/Grell.png" alt="Grell Map">                        
                         </div>
                       </div>
                     </div>                  
@@ -1561,43 +1561,43 @@
                   <div class="flex-wrapper">
                     <div>
                       <p><span class="num-color-teal">Farming Shop</span> </p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Jakka">  
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Jakka.png" alt="Jakka">  
                     </div>
                     <div>
                       <p><span class="num-color-teal">Weaponry Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Kraga">  
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Kraga.png" alt="Kraga">  
                     </div>
                     <div>
                       <p><span class="num-color-teal">Armory</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Nak">  
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Nak.png" alt="Nak">  
                     </div>
                     <div>
                       <p><span class="num-color-teal">Carpenter Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Drond">  
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Drond.png" alt="Drond">  
                     </div>
                     <div>
                       <p><span class="num-color-teal">Provisioner Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Trog">  
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Trog.png" alt="Trog">  
                     </div>   
                     <div>
                       <p><span class="num-color-teal">Provisioner Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Bukran">  
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Bukran.png" alt="Bukran">  
                     </div>  
                     <div>
                       <p><span class="num-color-teal">Leatherworking Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Jut">  
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Jut.png" alt="Jut">  
                     </div>   
                     <div>
                       <p><span class="num-color-teal">Magic Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Vilk">  
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Vilk.png" alt="Vilk">  
                     </div>  
                     <div>
                       <p><span class="num-color-teal">Magic Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Twak">  
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Vraje.png" alt="Vraje">  
                     </div> 
                     <div>
                       <p><span class="num-color-teal">Blacksmith Shop</span></p>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Vraje">  
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Twak.png" alt="Vraje">  
                     </div>        
                   </div> 
                   <hr>  
@@ -1606,25 +1606,25 @@
                     </div>           
                   <div class="flex-wrapper">
                     <div>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Engek">  
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Engek.png" alt="Engek">  
                     </div>
                     <div>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Gnarl Deathgrin"> 
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Gnarl_Deathgrin.png" alt="Gnarl Deathgrin"> 
                     </div>                    
                     <div>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Duchku">  
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Duchku.png" alt="Duchku">  
                     </div>
                     <div>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Grenda">  
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Grenda.png" alt="Grenda">  
                     </div>
                     <div>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Disciple of Agon">  
+                      <img class="npc-img" src="Images/NPC/Town/Grell_Disciple_of_Agon.png" alt="Disciple of Agon">  
                     </div>
                     <div>
-                      <img class="npc-img" src="Images/NPC/Town/" alt="Evil Orc Banker">  
+                      <img class="npc-img" src="Images/NPC/Town/Evil_Orc_Banker.png" alt="Evil Orc Banker">  
                     </div>
                     <div>
-                      <img class="npc-img" src="Images/NPC/Town/Orc_Guard.png" alt="Orc Guard">  
+                      <img class="npc-img" src="Images/NPC/Town/Evil_Orc_Guard.png" alt="Orc Guard">  
                     </div>
                     <div>
                       <img class="npc-img" src="Images/NPC/Town/Town_Guardian.png" alt="Town Guardian">  
