--- a/patchNotes2020.html
+++ b/patchNotes2020.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Ashen Empires, Quest, Guides, Role Playing, MMORPG">
     <meta name="author" content="Keith Heffington">
 
-    <title>AEGuides</title>
+    <title>AEGuides | Patch Notes 2020</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
