Fixed PatchNotes Link 2022

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                           <a href="patchNotes2021.html">Patch Notes 2021</a>
                       </li>
                       <li>
-                        <a href="patchnotes2022.html">Patch Notes 2022</a>
+                        <a href="patchNotes2022.html">Patch Notes 2022</a>
                     </li>
                     <li>
                       <a href="#aePatchNotes">Patch Notes 2023</a>
